name:                warp-socket-activation
version:             0.1.0.0
synopsis:            A simple wrapper for socket based activation.
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          Al Zohali <zohl@fmap.me>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/zohl/warp-socket-activation.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False


library
  exposed-modules:     Network.Wai.Handler.Warp.SocketActivation
  other-extensions:
  build-depends: base >=4.7 && < 5.0
               , bytestring >= 0.10.6 && < 0.11
               , data-default >= 0.7.1 && < 0.8
               , exceptions >= 0.8.3 && < 0.9
               , http-types >= 0.9.1 && < 0.10
               , network >= 2.6.3 && < 2.7
               , transformers >= 0.4.2 && < 0.5.3
               , streaming-commons >= 0.1.15 && < 0.2
               , systemd >= 1.0.2 && < 1.2
               , unix >= 2.7.1 && < 2.8
               , wai >= 3.2.1 && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010

  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
